--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+libsmartpen (0.2-10) maverick; urgency=low
+
+  * Stuff
+
+ -- Steven Walter <stevenrwalter@gmail.com>  Tue, 15 Feb 2011 21:49:45 -0500
+
+libsmartpen (0.2-9) maverick; urgency=low
+
+  * Bump for maverick
+
+ -- Steven Walter <stevenrwalter@gmail.com>  Mon, 15 Nov 2010 21:49:45 -0500
+
+libsmartpen (0.2-8) lucid; urgency=low
+
+  * Bump for lucid
+
+ -- Steven Walter <stevenrwalter@gmail.com>  Thu, 15 Apr 2010 21:49:45 -0500
+
 libsmartpen (0.2-7) karmic; urgency=low
 
   * Handle multiple OBEX devices more gracefully
