--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libsmartpen (0.6-1) natty; urgency=low
+
+  * ZOMG IT WORKS
+
+ -- Steven Walter <stevenrwalter@gmail.com>  Thu, 07 Jul 2011 21:49:45 -0500
+
 libsmartpen (0.5-2) maverick; urgency=low
 
   * Fix buffer overflow
