--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libsmartpen (0.6-2) natty; urgency=low
+
+  * Require openobex from my PPA
+
+ -- Steven Walter <stevenrwalter@gmail.com>  Mon, 11 Jul 2011 21:49:45 -0500
+
 libsmartpen (0.6-1) natty; urgency=low
 
   * ZOMG IT WORKS
